--- a/Projects/P1/index.html
+++ b/Projects/P1/index.html
@@ -3,9 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        Hello
+        <section class="hero">
+            <div class="header">
+                <div class="header-logo">Header Logo</div>
+                <div class="right-links">
+                    <ul>
+                        <li>link-one</li>
+                        <li>link-Two</li>
+                        <li>link-Three</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info1">
+                <div class="text card">
+                    <div class="hero-main-text">This website is awesome</div>
+                    <div class="hero-secondary-text">
+                        This website has some subtext that goes here under the main title.It's a smaller font and color is lower contrast
+                    </div>
+                    <button>Sign Up</button>
+                </div>
+                <div class="img1 card">
+                    <div class="placeholder">
+                        <img src="robin-canfield-ehiDIrGAtMc-unsplash.jpg" alt="" height="400px" width="600px">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="randinfo">
+            <div class="info2">
+                <div class="info2-header">
+                    Some Random Information.
+                </div>
+                <div class="boxes">
+                    <div class="box">
+                        <img src="aedrian-salazar-Tws17PwytpA-unsplash.jpg" width="250px" alt="">
+                        <div class="box-text">this is some subtext under an image</div>
+                    </div>
+                    <div class="box">
+                        <img src="aedrian-salazar-Tws17PwytpA-unsplash.jpg" width="250px" alt="">
+                        <div class="box-text">this is some subtext under an image</div>
+                    </div>
+                    <div class="box">
+                        <img src="aedrian-salazar-Tws17PwytpA-unsplash.jpg" width="250px" alt="">
+                        <div class="box-text">this is some subtext under an image</div>
+                    </div>
+                    <div class="box">
+                        <img src="aedrian-salazar-Tws17PwytpA-unsplash.jpg" width="250px" alt="">
+                        <div class="box-text">this is some subtext under an image</div>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>
+
+        <section class="quote">
+            <div class="quote-container">
+                <div class="quote-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto voluptatem sapiente quam id aperiam impedit nulla ea voluptas fugiat harum.</div>
+                <div class="quote-by">-Thor,GOT</div>
+            </div>
+        </section>
+
+        <section class="signUp">
+            <div class="signUpContainer">
+                <div class="signUp-text">
+                    <div class="signUp-header">Call to action! It's time!</div>
+                    <div class="signUp-sec">Sign up for our product by clicking that button over there
+                    </div>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footContainer">
+                <div class="foot">
+                    Copyright @ The Odin Project 2024
+                </div>
+            </div>
+        </footer>
+        
 </body>
 </html>
